src/syntax_highlight/snapshots/jiq__syntax_highlight__overlay__snapshot_tests__snapshot_cursor_at_end.snap
---
source: src/app/syntax_overlay.rs
expression: serialize_spans(&result)
---
- content: Hi
  fg: red
- content: " "
  modifiers:
    - reversed
