src/syntax_highlight/snapshots/jiq__syntax_highlight__overlay__snapshot_tests__snapshot_cursor_at_start.snap
---
source: src/app/syntax_overlay.rs
expression: serialize_spans(&result)
---
- content: H
  fg: red
  modifiers:
    - reversed
- content: ello
  fg: red
