src/syntax_highlight/snapshots/jiq__syntax_highlight__overlay__snapshot_tests__snapshot_extract_visible_unicode.snap
---
source: src/app/syntax_overlay.rs
expression: serialize_spans(&visible)
---
- content: lo👋Wo
